[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.2"
serde = "1.0.134"

[profile.release]
lto = true # オブジェクトファイルをまとめる操作で、複数のクレートが同じコードを使用していたら重複箇所を除去する。
opt-level = "z" # 最適化レベル。バイナリサイズの最適化(ループのベクトル化は行わない)
codegen-units = 1 # コード生成の並列度を下げて最適化を行いサイズを削減
panic = "abort" # バックトレースを生成しない。
